# oil

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: x91vfydidnby814xn4r415kpk68qdna2-source
.github/workflows/: build.yml
orphan-instance-lang/: Cargo.toml
orphan-instance-lang/src/: ast.rs  lib.rs  main.rs  mark_macro.rs  node.rs  oil.lalrpop  parser.rs
orphan-instance-lang/tests/: compile.rs  parse-error.rs
orphan-instance-lang/tests/compile-fail/: node-annotation.rs
orphan-instance-lang/tests/parse-error/: trait-trait.oil
orphan-instance-lang/tests/trybuild/: node-annotation.rs  node-annotation.stderr
orphan-instance-lang/tests/type-error/: example.oil  missing-struct.oil  struct-field.oil
semantics/: oil.typ  refs.bib
typelist/: Cargo.toml  README.md  TODO.md
typelist/src/: lib.rs
typelist/tests/: trybuild.rs
typelist/tests/compile-fail/: example.rs
typelist/tests/trybuild/: example.rs  example.stderr
