[package]
name = "orphan-instance-lang"
version = "0.1.0"
authors = ["Asbjørn Rysgaard Eriksen <mail@bliztle.com>"]
edition = "2021"

[[bin]] # Define the binary name and entry point
name = "oil"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[build-dependencies]
lalrpop = "0.22.0"

[dependencies]
typelist = { path = "../typelist" }
clap = { version = "4.5.23", features = ["derive"] }
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
test_each_file = "0.3.5"
trybuild = "1.0.105"
