[package]
name = "typelist"
version = "0.1.0"
authors = ["Asbjørn Rysgaard Eriksen <mail@bliztle.com>"]
edition = "2021"

[lib]
proc-macro = true

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
assert-tokenstreams-eq = "0.1.0"

[dependencies]
itertools = "0.13.0"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.90"
trybuild = "1.0.105"
